# tuv-workflow-web

./: .env.example  .firebaserc  .gitignore  CLAUDE.md  README.md  WORK_LOG.md  architecture-map.html  docker-compose.yml  drizzle.config.ts  eslint.config.js  firebase.json  firestore.rules  index.html  package-lock.json  package.json  praesentation.html  tsconfig.json  vite.config.js
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  deploy.yml
docker/mariadb/: my.cnf
docs/: antwort_mail_fuchs.md  architecture-map.html  backlog.md  backup.md  datenmodell.md  design.md  eigenstaendigkeitserklaerung.md  ki-nutzung.md  ki_nutzung.md  ki_nutzungserklaerung.md  mariadb-setup.md  nacharbeit_fuchs.html  pflichtenheft.md  projekt_status.html  projekt_walkthrough.md  quellen.md  test-coverage.md  testkonzept.md  treffen_brief.md  wf01-defense-layers.html
docs/decisions/: 001-mariadb-zentrale-persistenz.md  001-pglite-statt-firestore.md  002-3nf-normalisierung.md  003-wf01-enforcement.md  004-drizzle-orm.md  004-express-api-mariadb-driver.md  005-typescript-graduell.md  006-firebase-hosting.md  007-api-client-pattern.md  007-repository-pattern.md  008-keine-eingebetteten-arrays.md  009-monolithischer-server.md  010-hardening-roadmap.md  README.md  _template.md
scripts/: refactor-umlaute-und-kategorien.mjs
server/: db.js  index.js  validate.js
server/tests/: admin-token-boot.test.js  wf01.test.js
src/: App.jsx  firebase.js  index.css  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
(+57 files in other folders)
